# pytest-lambda-workshop

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt  update_python_on_cloud9.sh
.github/workflows/: deploy.yml
crisis-at-the-concert-err/: samconfig.toml  template.yaml
crisis-at-the-concert-err/src/: consts.py  ticket_booking.py  ticket_sum.py
crisis-at-the-concert-err/src/lambdas/: consts.py  ticket_booking.py  ticket_sum.py
crisis-at-the-concert-err/tests/: test_ticket_booking.py
crisis-at-the-concert-fixed/: env.json  template.yaml
crisis-at-the-concert-fixed/src/: ticket_booking.py  ticket_sum.py
crisis-at-the-concert-fixed/src/lambdas/: ticket_sum.py
crisis-at-the-concert-fixed/tests/: test_ticket_booking.py  test_ticket_sum.py
docs/: cleanup.md  index.md
docs/part1/: app-description.md  part1.md  using-pytest.md  what-to-test.md
docs/part2/: moto-example.md  part2.md
docs/part3/: deploy-to-aws.md  part3.md
