[tool.poetry]
name = "testing-lambdas-workshop"
version = "0.1.1"
description = "Testing your Lambdas using Unit Testing and AWS SAM Local"
authors = ["Efi MK <efi.merdler@gmail.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.17"
pillow = "^9.5.0"
cairosvg = "^2.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
boto3 = "^1.26.165"
moto = "^4.1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
